# MPI-integral-computer

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
ansible/: hosts  result.csv  run-bench.yml
results/: data.csv  local.csv  mpi.csv  report.ipynb  result.csv
scripts/: gather-data.sh  run-mpi.sh  run-sbatch-config.sh
src/: CMakeLists.txt  compute.cpp  compute.hpp  log.hpp  main.cpp  routine.cpp  routine.hpp  utils.cpp  utils.hpp
